examples/negative/name_errors/L3/6_duplicate_procs.ob
MODULE DuplicateProcs;

  PROCEDURE FOO;
  END FOO;

  PROCEDURE FOO;
  END FOO;

END DuplicateProcs.
